--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,3 +1,4 @@
+
 name: Build Android APK
 
 on:
@@ -15,20 +16,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build APK using Buildozer
-        # This action handles Python setup, Buildozer installation,
-        # Android SDK/NDK download, license acceptance, and the build process
-        # based on your buildozer.spec file.
         uses: ArtemSBulgakov/buildozer-action@v1
         id: buildozer
         with:
           command: buildozer android debug
           buildozer_version: stable
-          # No need for manual Python setup, environment variables, or sdkmanager calls here,
-          # as the action manages them internally.
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: myapp-debug-apk
-          path: ${{ steps.buildozer.outputs.filename }} # Path to the generated APK from the action
-          retention-days: 7 # How long the artifact will be stored on GitHub
+          path: bin/*.apk
+          retention-days: 7
